--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 
 # dependencies
 /node_modules
+/.idea
 /.pnp
 .pnp.js
+/client/node_modules
+/server/node_modules
 
 # testing
 /coverage
@@ -13,7 +16,6 @@
 
 # misc
 .DS_Store
-.env.local
 .env.development.local
 .env.test.local
 .env.production.local
