--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,15 @@
 {
   "name": "optimi",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Optimi Test Project",
+  "main": "server.js",
   "keywords": [],
   "author": "Dimitar Kostov",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "underscore": "^1.13.6"
   }
 }
